configure_file(
  input : 'appdata-validate.test.in',
  output : 'appdata-validate.test',
  configuration : conf,
  install: true,
  install_dir: join_paths('share', 'installed-tests', 'appstream-glib'),
)
configure_file(
  input : 'destdir-check.test.in',
  output : 'destdir-check.test',
  configuration : conf,
  install: true,
  install_dir: join_paths('share', 'installed-tests', 'appstream-glib'),
)

