# Copyright (C) 2015 Richard Hughes <richard@hughsie.com>
#
# Licensed under the GNU Lesser General Public License Version 2.1

configure_file(input : 'appdata-validate.test.in',
               output : 'appdata-validate.test',
               configuration : conf)
configure_file(input : 'destdir-check.test.in',
               output : 'destdir-check.test',
               configuration : conf)
